src/gui/painting/qpainterpath_p.h
@@ -298,7 +298,7 @@ inline void QPainterPathData::clear()
     elements.clear();
 
     cStart = 0;
-
+    fillRule = Qt::OddEvenFill;
     bounds = {};
     controlBounds = {};
 
