tests/auto/gui/painting/qpainterpath/tst_qpainterpath.cpp
@@ -161,10 +161,18 @@ void tst_QPainterPath::clear()
     p1.clear();
     QCOMPARE(p1, p2);
 
+    p1.lineTo(50, 50);
+    QPainterPath p3;
+    QCOMPARE(p1.elementCount(), 2);
+    p3.lineTo(50, 50);
+    QCOMPARE(p1, p3);
+
     QCOMPARE(p1.fillRule(), Qt::OddEvenFill);
     p1.setFillRule(Qt::WindingFill);
+    QVERIFY(p1 != p3);
     p1.clear();
-    QCOMPARE(p1.fillRule(), Qt::WindingFill);
+    QCOMPARE(p1.fillRule(), Qt::OddEvenFill);
+    QCOMPARE(p1, p2);
 }
 
 void tst_QPainterPath::reserveAndCapacity()
